属性名调整

--- a/src/LoadMore/index.css
+++ b/src/LoadMore/index.css
@@ -2,6 +2,7 @@
     font-size: .28rem;
     color: #9B9B9B;
     text-align: center;
+    width: 100%;
     > img {
         height: .28rem;
         width: .28rem;
