--- a/src/Footer/index.css
+++ b/src/Footer/index.css
@@ -1,5 +1,7 @@
 .FooterWrap {
     height: 1.5rem;
+    padding-bottom: constant(safe-area-inset-bottom);
+    padding-bottom: env(safe-area-inset-bottom);
     .footer {
         position: fixed;
         display: flex;
